--- a/ec2/html/user_data/packages/default/css/contents.css
+++ b/ec2/html/user_data/packages/default/css/contents.css
@@ -58,15 +58,8 @@ div#mycontents_area {
     width: 100%;
 }
 div#mynavi_area .mynavi_list {
-    margin-bottom: 20px;
-    width: 100%;
-}
-div#mynavi_area .mynavi_list li {
-    margin: 0 15px 5px 0;
-    padding-left: 15px;
-    float: left;
-    background: url('../img/icon/ico_arrow_01.gif') no-repeat left ;
-    font-size: 120%;
+    /*margin-bottom: 20px;*/
+    /*width: 100%;*/
 }
 
 div#mynavi_area div.point_announce {
