--- a/ec2/html/user_data/packages/default/css/header.css
+++ b/ec2/html/user_data/packages/default/css/header.css
@@ -307,6 +307,8 @@ ul { list-style: none;}
 		height: 100%;
 		background-color: #fff;
 		z-index: 9000;
+		text-align: left;
+		letter-spacing: 0;
 	}
 	#spMenu .spMenuInr {
 		padding: 8vw 6vw;
@@ -336,7 +338,7 @@ ul { list-style: none;}
 	#spMenu .spMenuBtn li a span {
 		display: inline-block;
 		padding-left: 8vw;
-		background: url(../images/icon_fav.svg) no-repeat left 15%;
+		background: url(../img/common/icon_fav.svg) no-repeat left 15%;
 		background-size: auto 80%;
 	}
 
