--- a/ec2/html/user_data/packages/default/css/common.css
+++ b/ec2/html/user_data/packages/default/css/common.css
@@ -97,7 +97,7 @@ img.picture {
 #topcolumn,
 #bottomcolumn,
 #footerbottomcolumn {
-    margin: 0px;
+    margin: 0;
     background: #fff;
     text-align: left;
     clear: both;
@@ -118,8 +118,8 @@ img.picture {
 .clearfix:after {
     display: block;
     clear: both;
-    height: 0px;
-    line-height: 0px;
+    height: 0;
+    line-height: 0;
     visibility: hidden;
     content: ".";
 }
@@ -411,4 +411,11 @@ div#complete_area .shop_information .name {
     margin-bottom: 10px;
     font-weight: bold;
     font-size: 140%;
+}
+
+/* Custom Scuti code
+**********************************************/
+
+div#main_column {
+    padding-top: 62px;
 }
